--- a/src/components/blogUpdate/blog_update.scss
+++ b/src/components/blogUpdate/blog_update.scss
@@ -2,42 +2,14 @@
 
 @media only screen and (min-width: 768px) {
   #blog_update {
-    // width: 75%;
+    width: 75%;
     margin: auto;
-    margin-bottom: 100px;
     color: white;
     #blog_text {
       display: flex;
       justify-content: space-between;
       align-items: last baseline;
-      // margin-top: 100px;
-
-      h5 {
-        font-size: 1.5em;
-        span {
-          color: gold;
-          margin-right: 10px;
-        }
-      }
-      h1 {
-        font-size: 3.5em;
-        color: gold;
-      }
-      button {
-        // border: 1px solid gold;
-        // background-color: transparent;
-        // height: 55px;
-        // color: gold;
-        // width: 200px;
-        // font-size: 1em;
-        // font-weight: 900;
-        margin-bottom: 0px;
-        // cursor: pointer;
-        // &:hover {
-        //   color: rgb(255, 255, 255);
-        //   background-color: gold;
-        // }
-      }
+      margin-top: 100px;
     }
     #blog_content {
       display: flex;
@@ -45,51 +17,36 @@
       #blog_card1 {
         display: flex;
         flex-direction: column;
-        //   justify-content: center;
-        //   align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         background-color: rgb(52, 72, 83);
-        max-height: 55vh;
-        // width: 44%;
+        width: 44%;
         padding: 20px;
         > img {
           width: 100%;
-          height: 50vh;
+          // height: 35vh;
         }
-
-        h1 {
-          padding: 0;
-          margin: 0;
-          color: gold;
-        }
-        .date_icon {
-          display: flex;
-          align-content: center;
-          justify-items: center;
-          gap: 10px;
-          align-items: center;
-          // background-color: blue;
-          // text-align: left;
-          img {
-            // width: 10%;
-            height: 2vh;
-            margin-top: 20px;
-          }
-          p {
-            font-size: 1em;
-            padding-bottom: 0;
-            margin-bottom: 0;
-          }
-        }
-        h1 {
-          font-size: 2em;
-          margin-top: 20px;
+        p{
+          margin-bottom: 0;
         }
       }
+
+      .date_icon {
+        display: flex;
+        align-content: flex-start;
+        align-items: center;
+        margin-top: 10px;
+        img {
+          height: 2vh;
+          margin-right: 5px;
+        }
+      }
+
       #blog_card2 {
         display: flex;
         flex-direction: column;
         gap: 10px;
-        // width: 51%;
+        width: 51%;
         height: 29vh;
         .blog_card2_item {
           display: flex;
@@ -97,43 +54,27 @@
           img {
             // width: 50%;
             height: 27vh;
-            // padding: 10px;
+            padding: 10px;
           }
           .blog_update_text {
             display: flex;
             flex-direction: column;
-            margin: 0px 20px 20px 0px;
-            //   background-color: red;
+            // margin: 0px 20px 20px 0px;
             width: 50%;
             // padding: 10px 0px 0px 0px;
             .date_icon {
               display: flex;
               align-content: flex-start;
               align-items: center;
+              margin-top: 10px;
 
               img {
                 width: 8%;
                 height: 2vh;
                 padding: 0;
-                margin: 0;
+                // margin: 0;
+                margin-right: 5px;
               }
-
-              > p {
-                margin: 0;
-              }
-
-              ~ p {
-                font-size: 1em;
-                margin-top: 10px;
-              }
-            }
-            h1 {
-              font-size: 1.17em;
-              margin-top: 10px;
-              margin-bottom: 0;
-              padding: 20px 0px 0px 0px;
-              color: gold;
-              font-weight: bold;
             }
           }
         }
@@ -148,7 +89,7 @@
     padding: 10px;
     gap: 10px;
     // width: 100%;
-    margin-bottom: 100px;
+    margin-bottom: 320px;
     color: white;
     // background-color: green;
     #blog_text {
@@ -188,35 +129,46 @@
         padding: 10px;
         > img {
           max-width: 100%;
-          height: 50vh;
+          // height: 50vh;
         }
-        .date_icon {
-          display: flex;
-          align-content: center;
-          justify-items: center;
-          gap: 10px;
-          align-items: center;
-          // background-color: blue;
-          // text-align: left;
-          img {
-            // width: 10%;
-            height: 2vh;
-            margin-top: 20px;
-          }
-          p {
-            font-size: 1em;
-            padding-bottom: 0;
-            margin-bottom: 0;
-          }
-        }
+        // .date_icon {
+        //   display: flex;
+        //   align-content: center;
+        //   justify-items: center;
+        //   gap: 10px;
+        //   align-items: center;
+        //   // background-color: blue;
+        //   // text-align: left;
+        //   img {
+        //     // width: 10%;
+        //     height: 2vh;
+        //     margin-top: 20px;
+        //   }
+          // p {
+          //   font-size: 1em;
+          //   padding-bottom: 0;
+          //   margin-bottom: 0;
+          // }
+        // }
 
-        h1 {
-          padding: 0;
-          color: gold;
-          font-size: 1.2em;
-          margin-top: 10px;
+        // h1 {
+        //   padding: 0;
+        //   color: gold;
+        //   font-size: 1.2em;
+        //   margin-top: 10px;
+        // }
+      }
+      .date_icon {
+        display: flex;
+        align-content: flex-start;
+        align-items: center;
+        margin-top: 10px;
+        img {
+          height: 2vh;
+          margin-right: 5px;
         }
       }
+
       #blog_card2 {
         display: flex;
         flex-direction: column;
@@ -242,7 +194,7 @@
             display: flex;
             flex-direction: column;
             // margin: 0px 20px 20px 0px;
-              // background-color: red;
+            // background-color: red;
             width: 100%;
             // padding: 10px;
             .date_icon {
@@ -257,23 +209,23 @@
                 margin: 0;
               }
 
-              > p {
-                margin: 0;
-              }
+              // > p {
+              //   margin: 0;
+              // }
 
-              ~ p {
-                font-size: 1em;
-                margin-top: 10px;
-              }
+              // ~ p {
+              //   font-size: 1em;
+              //   margin-top: 10px;
+              // }
             }
-            h1 {
-              font-size: 1.17em;
-              margin-top: 10px;
-              margin-bottom: 0;
-              padding: 20px 0px 0px 0px;
-              color: gold;
-              font-weight: bold;
-            }
+            // h1 {
+            //   font-size: 1.17em;
+            //   margin-top: 10px;
+            //   margin-bottom: 0;
+            //   padding: 20px 0px 0px 0px;
+            //   color: gold;
+            //   font-weight: bold;
+            // }
           }
         }
       }
