--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -4,27 +4,30 @@
   #newsletter {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
-    // width: 75%;
+    align-items: center;
+    width: 75%;
     margin: auto;
-    // background-color: rgb(52, 72, 83);
-    // padding: 20px;
-    // margin-top: 100px;
+    background-color: rgb(52, 72, 83);
+    padding: 20px;
+    // margin-top: 0px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 50000;
+    position: relative;
+    bottom: -90px;
 
     .newsletter_text {
       width: 45%;
 
-      h1 {
-        font-size: 3em;
-        color: gold;
-        padding-bottom: 0;
-        margin-bottom: 0;
-      }
+      // h1 {
+      //   font-size: 3em;
+      //   color: gold;
+      //   padding-bottom: 0;
+      //   margin-bottom: 0;
+      // }
 
-      p {
-        margin-top: 0;
-      }
+      // p {
+      //   margin-top: 0;
+      // }
     }
     form {
       width: 45%;
