--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -3,14 +3,14 @@
 @media only screen and (min-width: 768px) {
   #partners_container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   margin-top: 100px;
   background-color: grey;
   #partners {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    // height: 200px;
+    height: 200px;
   }
 }}
 @media only screen and (max-width: 768px) {
