--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -4,52 +4,60 @@
   #testimonials {
     display: flex;
     justify-content: space-between;
-    // gap: 40px;
-    // width: 75%;
-    // margin: auto;
+    gap: 40px;
+    width: 75%;
+    margin: auto;
     padding-top: 100px;
     padding-bottom: 100px;
 
     #testimonials_text {
-      // width: 50%;
+      width: 50%;
       padding-top: 0;
       margin-top: 0;
 
-      h5 {
-        font-size: 1.5em;
-        padding-top: 0;
-        margin-top: 0;
+      // h5 {
+      //   font-size: 1.5em;
+      //   padding-top: 0;
+      //   margin-top: 0;
 
-        span {
-          color: gold;
-          margin-right: 10px;
-        }
-      }
+      //   span {
+      //     color: gold;
+      //     margin-right: 10px;
+      //   }
+      // }
 
-      h1 {
-        font-size: 3.5em;
-        color: gold;
-      }
+      // h1 {
+      //   font-size: 3.5em;
+      //   color: gold;
+      // }
 
-      p {
-      }
+      // p {
+      // }
     }
 
     #testimonial_card_container {
       width: 55%;
-
+      .testimonial_card {
+        #rating {
+          background-color: green;
+        }
+        p {
+          margin-top: 10px;
+          // background-color: green;
+        }
+      }
       .slider {
-        // margin-left: 50px;
+        margin-left: 50px;
         .testimonial_card {
           display: flex;
           flex-direction: column;
           background-color: rgb(56, 60, 71);
-          // max-width: 90%;
-          // padding: 10px;
+          max-width: 90%;
+          padding: 10px;
 
-          > p {
-            font-size: 1em;
-          }
+          // > p {
+          //   font-size: 1em;
+          // }
 
           .testimonial_image_byline {
             display: flex;
