--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -4,11 +4,10 @@
   #why_choose_us {
     display: flex;
     gap: 60px;
-    // width: 75%;
-    // margin: auto;
-
+    width: 75%;
+    margin: auto;
     #why_choose_us_text {
-      // width: 40%;
+      width: 40%;
 
       & h5 {
         margin: 0;
@@ -38,13 +37,13 @@
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
-      // width: 60%;
+      width: 60%;
 
       #why_choose_us_card {
         display: flex;
         flex-direction: column;
         align-items: center;
-        // width: 40%;
+        width: 40%;
         border: 1px solid #f0f0f0;
         padding: 20px 20px 0px 20px;
         text-align: center;
@@ -52,15 +51,15 @@
           width: 50px;
           margin-bottom: 10px;
         }
-        & h3 {
-          font-size: 1.8rem;
-          font-weight: 700;
-          margin-bottom: 10px;
-          padding: 0;
-          margin: 0;
-          width: 100%;
-          text-wrap: wrap;
-        }
+        // & h3 {
+        //   font-size: 1.8rem;
+        //   font-weight: 700;
+        //   margin-bottom: 10px;
+        //   padding: 0;
+        //   margin: 0;
+        //   width: 100%;
+        //   text-wrap: wrap;
+        // }
       }
     }
   }
