--- a/src/components/footer body/footer_body.scss
+++ b/src/components/footer body/footer_body.scss
@@ -73,6 +73,7 @@
     color: white;
     height: 99vh;
     background-color: #230b0b;
+    margin-top: 50px;
     .footer_body_content {
       display: flex;
       flex-direction: column;
