--- a/src/components/about/aboutDetails.scss
+++ b/src/components/about/aboutDetails.scss
@@ -1,5 +1,8 @@
 @import "../scss/config";
 
+#aboutdetailsContainer {
+  background-color: #230b0b;
+}
 @media only screen and (min-width: 768px) {
   #aboutdetailsContainer {
     background-color: #230b0b;
@@ -172,6 +175,170 @@
             width: 10%;
             // height: 50vh;
           }
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  #aboutdetailsContainer {
+    background-color: #230b0b;
+    // padding-bottom: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    #aboutBanner {
+      margin-bottom: 100px;
+      #aboutDetailsText {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 50%;
+        margin: auto;
+        text-align: center;
+        margin-top: 100px;
+
+        // h1 {
+        //   font-size: 2.9em;
+        //   color: gold;
+        // }
+        // p {
+        //   font-size: 1.2em;
+        //   line-height: 1.5em;
+        //   color: white;
+        // }
+      }
+    }
+  }
+  #aboutUsCardContainer {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    // align-content: flex-start;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 100%;
+    // background-color: green;
+
+    .aboutUsCard {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 20px;
+      background-color: transparent;
+      border-radius: 2px;
+      box-shadow: 0px 0px 10px 0px #000000;
+      text-align: left;
+      border: 1px solid rgb(255, 255, 255);
+      hr {
+        align-items: flex-start;
+        width: 20%;
+        border: 1px solid gold;
+        margin-left: 0px;
+      }
+      img {
+        width: 100%;
+        background-color: red;
+        padding: 20px;
+      }
+      h3 {
+        margin: 0;
+        padding: 0;
+      }
+      p{
+        margin-top: 20px;
+      }
+    }
+  }
+  #ourSkillsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    // padding-bottom: 100px;
+    #ourSkillsText {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      // align-items: flex-start;
+      width: 100%;
+      margin: auto;
+      text-align: center;
+
+      .skills {
+        text-align: left;
+      }
+
+      // h5 {
+      //   font-size: 1.9em;
+      //   color: gold;
+      //   padding: 0;
+      //   margin: 0;
+      //   span {
+      //     color: white;
+      //     margin-right: 8px;
+      //   }
+      // }
+      // h1 {
+      //   font-size: 2.9em;
+      //   color: gold;
+      //   // padding: 0;
+      //   margin-top: 10px;
+      //   // background-color: rgb(226, 241, 8);
+      // }
+      // p {
+      //   font-size: 1.2em;
+      //   line-height: 1.5em;
+      //   color: white;
+      // }
+    }
+    img {
+      width: 100%;
+      // height: 60vh;
+    }
+  }
+  #whyChooseUsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    // width: 100%;
+    text-align: center;
+    // background-color: green;
+    #whyChooseUsTextContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: last baseline;
+      justify-content: space-between;
+      //   background-color: rgb(214, 69, 11);
+      #whyChooseUsTextTitle {
+        // background-color: rgb(16, 165, 224);
+      }
+    }
+    #whyChooseUsCardContainer {
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      width: 100%;
+      gap: 30px;
+      margin-bottom: 50px;
+      .whyChooseUsCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // text-align: center;
+        // width: 100%;
+        padding: 10px;
+        border: 1px solid rgb(255, 255, 255);
+        img {
+          width: 10%;
+          // height: 50vh;
         }
       }
     }
