--- a/src/components/banners/menuBanner.scss
+++ b/src/components/banners/menuBanner.scss
@@ -29,3 +29,35 @@
     }
   }
 }
+@media only screen and (max-width: 768px) {
+  #MenuBannerContainer {
+    display: flex;
+    flex-direction: column;
+    background-color: #230b0b;
+    padding-bottom: 100px;
+    color: white;
+    margin-bottom: 100px;
+    #MenuBanner {
+      // margin-bottom: 100px;
+      #MenuBannerText {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+        text-align: center;
+        margin-top: 100px;
+
+        // h1 {
+        //   font-size: 2.9em;
+        //   color: gold;
+        // }
+        // p {
+        //   font-size: 1.2em;
+        //   line-height: 1.5em;
+        //   color: white;
+        // }
+      }
+    }
+  }
+}
