--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -56,39 +56,10 @@
       #hire_us_text {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
         text-align: center;
-        margin: 5px 20px;
-        // width: 75%;
-        // margin: auto;
-        // z-index: 5000;
-        // color: white;
-        // h5,
-        // h1,
-        // p,
-        // button {
-        //   // width: 75%;
-        // }
-        // h5 {
-        //   font-size: 1.3em;
-        //   padding: 0;
-        //   margin-top: 50px;
-        //   padding: 0;
-        //   margin-top: 0;
-        //   margin-bottom: 0;
-        //   span {
-        //     color: gold;
-        //     margin-right: 10px;
-        //   }
-        // }
-        // h1 {
-        //   font-size: 2.5em;
-        //   color: gold;
-        //   padding: 0;
-        //   margin: 0;
-        // }
-        // p {
-        //   font-size: 1em;
-        // }
         button {
           margin-top: 7px;
         }
