--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -45,4 +45,86 @@
       }
     }
   }
+  .mobile-menu-breadcrumb {
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 999;
+  }
+
+  .mobile-menu-open {
+    nav {
+      display: block; // Show nav when mobile menu is open
+    }
+  }
+}
+@media only screen and (max-width: 769px) {
+  #nav_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    color: #fff;
+    font-size: 1.2rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 75%;
+    margin: auto;
+    // background-color: green;
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #f00;
+      img {
+        width: 80px;
+        height: 30px;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    nav {
+      margin: 0px 150px 0px 150px;
+      ul {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        display: flex;
+        list-style: none;
+        margin: 0;
+        li {
+          margin: 0 10px;
+          a {
+            color: #fff;
+            text-decoration: none;
+            &:hover {
+              color: gold;
+            }
+          }
+        }
+      }
+    }
+  }
+  .mobile-menu-breadcrumb {
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 999;
+  }
+
+  .mobile-menu-open {
+    Nav {
+      display: block; // Show nav when mobile menu is open
+    }
+  }
 }
