--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -62,47 +62,34 @@
   #newsletter {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
-    // width: 100%;
-    // margin: auto;
     background-color: rgb(52, 72, 83);
-    margin-top: 200px;
-    margin-bottom: 50px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    // background-color: green;
 
     .newsletter_text {
-      width: 100%;
-
-      h1 {
-        font-size: 3em;
-        color: gold;
-        padding-bottom: 0;
-        margin-bottom: 0;
-      }
-
-      p {
-        margin-top: 0;
-      }
+      display: flex;
+      flex-direction: column;
+      margin-top: 20px;
+      // align-items: center;
+      // width: 100%;
+      // padding: 20px;
+      // background-color: green;
     }
     form {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
-      width: 80%;
+      width: 100%;
       input {
-        width: 100%;
-        height: 4vh;
-        // padding: 12px;
-        // border: 1px solid gold;
-        // background-color: transparent;
+        // width: 100%;
+        // height: 4vh;
       }
       button {
-        width: 90%;
+        // width: 90%;
         border: 0px solid gold;
         border-radius: 0px;
         margin-top: 10px;
