--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -2,30 +2,30 @@
 
 @media only screen and (min-width: 768px) {
   #partners_container {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 100px;
-  background-color: grey;
-  #partners {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    height: 200px;
+    margin-top: 100px;
+    background-color: grey;
+    #partners {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 200px;
+    }
   }
-}}
+}
 @media only screen and (max-width: 768px) {
   #partners_container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 100px;
     background-color: grey;
     flex-wrap: wrap;
+    height: 50px;
     #partners {
-      // display: flex;
-      // justify-content: space-around;
-      // align-items: center;
-      // flex-wrap: wrap;
-      height: 50px;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
 
       img {
         width: 100px;
