--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -131,30 +131,12 @@
     // padding-bottom: 100px;
 
     #testimonials_text {
-      // width: 100%;
-      padding-top: 0;
-      margin: 5px 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 10px;
+      align-items: center;
       text-align: center;
-
-      // h5 {
-      //   font-size: 1.3em;
-      //   padding-top: 0;
-      //   margin-top: 0;
-
-      //   span {
-      //     color: gold;
-      //     margin-right: 10px;
-      //   }
-      // }
-
-      // h1 {
-      //   font-size: 2.5em;
-      //   color: gold;
-      // }
-
-      // p {
-      //   font-size: 0.9em;
-      // }
     }
 
     #testimonial_card_container {
