--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -66,41 +66,26 @@
 }
 @media only screen and (max-width: 768px) {
   #why_choose_us {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     // gap: 60px;
     // width: 100%;
-    margin: auto;
+    // margin: auto;
     padding: 10px;
 
     #why_choose_us_text {
-      text-align: center;
-      margin: 5px 20px;
-      // margin: 10px;
-      // & h5 {
-      //   margin: 0;
-      //   font-size: 1.5em;
-      //   color: rgb(250, 185, 7);
-      //   span {
-      //     color: white;
-      //     margin-right: 10px;
-      //   }
-      // }
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 10px;
+      align-items: center;
 
-      // & h1 {
-      //   color: rgb(250, 185, 7);
-      //   font-size: 3.5em;
-      //   padding: 0;
-      //   margin: 0;
-      //   text-align: center;
-      // }
+      h2, p {
+        text-align: center;
+      }
 
-      & p {
-        // margin-top: 40px;
-        // margin-bottom: 40px;
-        // font-size: 1.2em;
-        // text-align: center;
+      .skills {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
       }
     }
 
