--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -82,14 +82,14 @@
     // }
 
     .gallery_text {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin: 10px;
-      align-items: center;
-      h2 {
-        margin-bottom: 0;
-      }
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+      // margin: 10px;
+      // align-items: center;
+      // h2 {
+      //   margin-bottom: 0;
+      // }
     }
     #gallery_container {
       display: flex;
