--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -72,20 +72,11 @@
     padding: 10px;
 
     #why_choose_us_text {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin: 10px;
-      align-items: center;
-
-      h2, p {
-        text-align: center;
-      }
-
       .skills {
         display: flex;
         flex-direction: column;
         width: 100%;
+        text-align: left;
       }
     }
 
