--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -23,13 +23,13 @@
       // padding: 10px;
     }
   }
-  #about_text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 5px 20px;
-    text-align: center;
-  }
+  // #about_text {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   margin: 5px 20px;
+  //   text-align: center;
+  // }
 }
 
 @media only screen and (min-width: 769px) {
