--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -57,39 +57,21 @@
         > div {
           display: flex;
           gap: 10px;
-          // background-color: yellow;
         }
         position: absolute;
-        top: -2%;
+        top: 22%;
         left: 27%;
-        // transform: translate(-50%, -50%);
         font-size: 1.5em;
         .social-icon {
           display: flex;
         }
       }
       .banner_text {
-        position: absolute;
+        margin-top: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         text-align: center;
-        margin-top: 200px;
-        top: 38%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
-        & h5 {
-          // font-size: 1.4em;
-          // margin-bottom: -10px; /* Set font size for h5 */
-        }
-
-        & h1 {
-          // font-size: 3.4em; /* Set font size for h1 */
-        }
-
-        & p {
-          // font-size: 1.2em;
-          // margin-top: -22px;
-          // margin-bottom: -15px; /* Set font size for paragraphs */
-        }
       }
     }
   }
