--- a/src/components/banners/menuBanner.scss
+++ b/src/components/banners/menuBanner.scss
@@ -40,13 +40,13 @@
     #MenuBanner {
       // margin-bottom: 100px;
       #MenuBannerText {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        margin: auto;
-        text-align: center;
-        margin-top: 100px;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // width: 100%;
+        // margin: auto;
+        // text-align: center;
+        // margin-top: 100px;
 
         // h1 {
         //   font-size: 2.9em;
