--- a/src/components/blogUpdate/blog_update.scss
+++ b/src/components/blogUpdate/blog_update.scss
@@ -97,14 +97,14 @@
       align-items: center;
     }
     .blog_text {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px 20px 0px;
-      text-align: center;
-      h2 {
-        margin: 0;
-      }
+      // display: flex;
+      // flex-direction: column;
+      // align-items: center;
+      // padding: 20px 20px 0px;
+      // text-align: center;
+      // h2 {
+      //   margin: 0;
+      // }
     }
     #blog_content {
       display: flex;
