--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -54,12 +54,12 @@
       display: flex;
       flex-direction: column;
       #hire_us_text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 10px;
-        text-align: center;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        // margin: 10px;
+        // text-align: center;
         button {
           margin-top: 7px;
         }
