--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -45,62 +45,58 @@
       }
     }
   }
-  .mobile-menu-breadcrumb {
-    display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-    z-index: 999;
-  }
 
-  .mobile-menu-open {
-    nav {
-      display: block; // Show nav when mobile menu is open
-    }
+  .mobile_breadcrumb {
+    display: none;
   }
 }
+/* nav.scss */
+
 @media only screen and (max-width: 769px) {
   #nav_container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     align-content: center;
     color: #fff;
-    font-size: 1.2rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 75%;
-    margin: auto;
-    // background-color: green;
+    padding: 10px 20px;
+
     .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
       color: #f00;
+
       img {
-        width: 80px;
-        height: 30px;
+        width: 280px;
         margin: 0;
         padding: 0;
       }
     }
+
     nav {
-      margin: 0px 150px 0px 150px;
+      width: 90%;
+      height: 100%; /* Set height to 100% of viewport height */
+      background-color: rgb(31, 53, 82);
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 5000;
+      font-weight: 900;
+
       ul {
         display: flex;
-        justify-items: center;
-        align-items: center;
-        display: flex;
+        flex-direction: column;
+        justify-items: flex-start;
+        align-items: flex-start;
         list-style: none;
-        margin: 0;
+        margin-top: 80px;
+
         li {
-          margin: 0 10px;
+          margin: 10px 10px;
+
           a {
             color: #fff;
             text-decoration: none;
+
             &:hover {
               color: gold;
             }
@@ -109,22 +105,29 @@
       }
     }
   }
-  .mobile-menu-breadcrumb {
+
+  .navbar {
+    display: none;
+
+    &.show {
+      display: block;
+      height: 100%; /* Set height to 100% of viewport height */
+    }
+
+    & close::content {
+      
+    }
+  }
+
+  .mobile_breadcrumb {
     display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
+    position: relative;
     background: transparent;
     border: none;
     color: white;
     font-size: 20px;
     cursor: pointer;
-    z-index: 999;
-  }
-
-  .mobile-menu-open {
-    Nav {
-      display: block; // Show nav when mobile menu is open
-    }
+    font-size: 1.5em;
+    z-index: 5000;
   }
 }
