--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -131,12 +131,12 @@
     // padding-bottom: 100px;
 
     #testimonials_text {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin: 10px;
-      align-items: center;
-      text-align: center;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+      // margin: 10px;
+      // align-items: center;
+      // text-align: center;
     }
 
     #testimonial_card_container {
