--- a/src/components/banners/menuBanner.scss
+++ b/src/components/banners/menuBanner.scss
@@ -3,28 +3,25 @@
 @media only screen and (min-width: 768px) {
   #MenuBannerContainer {
     background-color: #230b0b;
-    padding-bottom: 100px;
     color: white;
-    #MenuBanner {
-      // margin-bottom: 100px;
-      #MenuBannerText {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 50%;
-        margin: auto;
-        text-align: center;
-        margin-top: 100px;
+    #MenuBannerText {
+      margin-bottom: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 50%;
+      margin: auto;
+      text-align: center;
+      margin-top: 100px;
 
-        h1 {
-          font-size: 2.9em;
-          color: gold;
-        }
-        p {
-          font-size: 1.2em;
-          line-height: 1.5em;
-          color: white;
-        }
+      h1 {
+        font-size: 2.9em;
+        color: gold;
+      }
+      p {
+        font-size: 1.2em;
+        line-height: 1.5em;
+        color: white;
       }
     }
   }
