--- a/src/components/our record/our_record.scss
+++ b/src/components/our record/our_record.scss
@@ -7,7 +7,7 @@
     align-content: center;
     background-color: #474242;
     padding: 40px 0;
-    // margin-bottom: 100px;
+    margin-bottom: 100px;
     flex-wrap: wrap;
 
     .our_record_item {
