--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -9,41 +9,21 @@
     width: 75%;
     margin: auto;
     margin-bottom: 50px;
-    padding-top: 150px;
+    padding-top: 50px;
 
     #our_sercices_text {
       display: flex;
       align-items: last baseline;
       color: gold;
+      // background-color: green;
       > div {
         display: flex;
         flex-direction: column;
-        width: 50%;
-        & h5 {
-          font-size: 1.8rem;
-          font-weight: 700;
-          margin-bottom: 10px;
-          padding: 0;
-          margin: 0;
-          span {
-            color: #ffffff;
-            margin-right: 5px;
-          }
-        }
+        align-items: flex-start;
+        width: 100%;
 
-        & h1 {
-          font-size: 3.6rem;
-          font-weight: 700;
-          margin-bottom: 20px;
-          padding: 0;
-          margin-top: 10px;
-        }
-
-        & p {
-          font-size: 1.2rem;
-          font-weight: 500;
-          margin-top: 20px;
-          color: white;
+        h2 {
+          font-size: 3.5em;
         }
       }
     }
@@ -52,7 +32,7 @@
       justify-content: space-between;
       gap: 25px;
       width: 100%;
-      margin-top: 50px;
+      // margin-top: 20px;
       flex-wrap: wrap;
       // width: 100%;
       .our_services_item {
@@ -73,20 +53,12 @@
           object-fit: cover;
         }
 
-        & h3 {
-          font-size: 1.8rem;
-          font-weight: 700;
-          color: rgb(245, 189, 6);
-          // padding: 0;
-          margin-bottom: 10px;
-        }
-
         & p {
-          font-size: 1.2rem;
+          // font-size: 1.2rem;
           // margin-top: 10px;
           color: white;
           padding: 20px;
-          margin: 0;
+          // margin: 0;
         }
       }
     }
