--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -2,45 +2,24 @@
 
 @media only screen and (min-width: 768px) {
   #hire_us_container {
+    height: 50vh;
     #hire_us {
       display: flex;
       flex-direction: column;
-      #hire_us_text {
+      justify-content: center;
+      align-content: center;
+      > div {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
-        width: 75%;
         margin: auto;
-        z-index: 5000;
+        align-items: flex-start;
+        text-align: left;
+        width:75%;
+        // z-index: 5000;
         color: white;
-        h5,
-        h1,
-        p,
-        button {
-          // width: 75%;
+        h5, p, h2 {
+          width: 70%;
         }
-        // h5 {
-        //   font-size: 1.5em;
-        //   padding: 0;
-        //   margin-top: 50px;
-        //   padding: 0;
-        //   margin-top: 0;
-        //   margin-bottom: 0;
-        //   span {
-        //     color: gold;
-        //     margin-right: 10px;
-        //   }
-        // }
-        // h1 {
-        //   font-size: 3.5em;
-        //   color: gold;
-        //   padding: 0;
-        //   margin: 0;
-        // }
-        // p {
-        //   font-size: 1.3em;
-        // }
       }
     }
   }
