--- a/src/components/our services/ourServicesDetails.scss
+++ b/src/components/our services/ourServicesDetails.scss
@@ -3,7 +3,7 @@
 @media only screen and (min-width: 768px) {
   #OurServicesDetailsContainer {
     background-color: #230b0b;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
     color: white;
     #OurServicesDetailsBanner {
       margin-bottom: 100px;
