--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -10,29 +10,13 @@
     padding-top: 100px;
     padding-bottom: 100px;
 
-    #testimonials_text {
-      width: 50%;
-      padding-top: 0;
-      margin-top: 0;
-
-      // h5 {
-      //   font-size: 1.5em;
-      //   padding-top: 0;
-      //   margin-top: 0;
-
-      //   span {
-      //     color: gold;
-      //     margin-right: 10px;
-      //   }
-      // }
-
-      // h1 {
-      //   font-size: 3.5em;
-      //   color: gold;
-      // }
-
-      // p {
-      // }
+    > div {
+      // display: flex;
+      align-items: flex-start;
+      text-align: left;
+      width: 40%;
+      // padding-top: 0;
+      // margin-top: 0;
     }
 
     #testimonial_card_container {
