--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -25,16 +25,15 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      align-items: first baseline;
       justify-content: first baseline;
       width: 50%;
       text-align: left;
       // background-color: green;
       margin-top: 0;
       padding-top: 0;
-      h5 {
-        margin-top: 0;
-      }
+      // h5 {
+      //   margin-top: 0;
+      // }
     }
   }
 }
