--- a/src/components/blog/articleDetails.scss
+++ b/src/components/blog/articleDetails.scss
@@ -12,11 +12,9 @@
   #article_container {
     display: flex;
     justify-content: flex-end;
-    // align-items: first baseline;
-    // align-content: first baseline;
     width: 75%;
     margin: auto;
-    // background-color: green;
+    margin-top: 100px;
   }
 
   #article_content {
@@ -24,24 +22,19 @@
     justify-content: space-between;
     align-content: first baseline;
     width: 100%;
-    //   background-color: green;
   }
 
   #article_text {
     display: flex;
     flex-direction: column;
     width: 70%;
-    margin-bottom: 100px;
+    // margin-bottom: 50px;
     color: gold;
     img {
       width: 100%;
       margin-bottom: 20px;
     }
 
-    p {
-      margin-bottom: 20px;
-      margin-right: 0;
-    }
     #shareThisPost {
       display: flex;
       justify-content: space-between;
@@ -50,11 +43,11 @@
       margin-top: 30px;
       border-top: 1px solid #ccc8c8;
       border-bottom: 1px solid #ccc8c8;
-      color: gold;
+      h3 {
+        margin-top: 0;
+      }
     }
-    p {
-      color: white;
-    }
+
     #formContainer {
       display: flex;
       flex-direction: column;
@@ -97,7 +90,6 @@
     align-content: first baseline;
     gap: 20px;
     width: 25%;
-    // padding: 20px;
 
     #author {
       display: flex;
@@ -111,16 +103,6 @@
         height: 10vh;
         border-radius: 50%;
       }
-      h5 {
-        margin-bottom: 10px;
-        font-size: 1.3em;
-        margin-top: 10px;
-      }
-
-      p {
-        margin-bottom: 20px;
-        margin-top: 10px;
-      }
     }
 
     #recentPost {
@@ -128,32 +110,21 @@
       padding: 10px;
       .recentPostCard {
         display: flex;
-        gap: 20px;
+        gap: 10px;
         img {
-          // width: 30%;
-          height: 8vh;
+          height: 10vh;
         }
         .recentPostText {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-          align-content: first baseline;
-          gap: 10px;
-          margin-top: 0;
-          padding-top: 0;
-
           > p {
-            margin-top: 0;
-            margin-bottom: 0;
+            padding-bottom: 0;
+            margin-bottom: 5px;
           }
           .imageDate {
-            display: flex;
             margin-top: 0;
-            padding-top: 0;
-            img {
-              width: 15%;
-              height: 2vh;
-            }
+            padding: 0;
             p {
               margin-top: 0;
               padding: 0;
@@ -163,20 +134,14 @@
       }
     }
     #questions {
+      display: flex;
       > div {
-        margin: 0;
-        h1 {
-          padding: 20px;
-          margin: 0;
-          font-size: 1.9em;
-        }
-        p {
-          padding: 0px 20px;
-          margin: 0;
-        }
+        padding: 0px 10px 0px 10px;
         > div {
-          margin-top: 10px;
-          margin-left: 20px;
+          gap: 10px;
+          span {
+            margin-left: 10px;
+          }
         }
       }
     }
@@ -184,9 +149,169 @@
       display: flex;
       flex-direction: column;
       width: 95%;
-      padding: 20px 0px 30px 20px;
+      padding: 0px 0px 30px 20px;
       color: gold;
       background-color: rgb(25, 34, 44);
+      h3 {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #article_display {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: $page-background-color;
+    color: white;
+  }
+
+  #article_container {
+    display: flex;
+    justify-content: flex-end;
+    width: 75%;
+    margin: auto;
+    margin-top: 100px;
+  }
+
+  #article_content {
+    display: flex;
+    justify-content: space-between;
+    align-content: first baseline;
+    width: 100%;
+  }
+
+  #article_text {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin-bottom: 100px;
+    color: gold;
+    img {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    #shareThisPost {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 0px;
+      margin-top: 30px;
+      border-top: 1px solid #ccc8c8;
+      border-bottom: 1px solid #ccc8c8;
+      color: gold;
+    }
+
+    #formContainer {
+      display: flex;
+      flex-direction: column;
+      width: 98%;
+      color: gold;
+      form {
+        width: 100%;
+        color: gold;
+        input[type="text"],
+        input[type="email"] {
+          width: 100%;
+          margin-bottom: 10px;
+          margin-left: 0;
+          padding: 10px;
+          background-color: #291414;
+          color: gold;
+          &::placeholder {
+            color: gold;
+          }
+        }
+
+        textarea {
+          width: 100%;
+          height: 150px;
+          margin-bottom: 10px;
+          padding: 10px;
+          background-color: #291414;
+          &::placeholder {
+            color: gold;
+          }
+        }
+      }
+    }
+  }
+
+  #sideBar {
+    display: flex;
+    flex-direction: column;
+    align-items: first baseline;
+    align-content: first baseline;
+    gap: 20px;
+    width: 25%;
+
+    #author {
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      text-align: center;
+      align-items: center;
+      background-color: rgb(25, 34, 44);
+      img {
+        width: 30%;
+        height: 10vh;
+        border-radius: 50%;
+      }
+    }
+
+    #recentPost {
+      background-color: rgb(25, 34, 44);
+      padding: 10px;
+      .recentPostCard {
+        display: flex;
+        gap: 10px;
+        img {
+          height: 10vh;
+        }
+        .recentPostText {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          > p {
+            padding-bottom: 0;
+            margin-bottom: 5px;
+          }
+          .imageDate {
+            margin-top: 0;
+            padding: 0;
+            p {
+              margin-top: 0;
+              padding: 0;
+            }
+          }
+        }
+      }
+    }
+    #questions {
+      display: flex;
+      > div {
+        padding: 0px 10px 0px 10px;
+        > div {
+          gap: 10px;
+          span {
+            margin-left: 10px;
+          }
+        }
+      }
+    }
+    #followUs {
+      display: flex;
+      flex-direction: column;
+      width: 95%;
+      padding: 0px 0px 30px 20px;
+      color: gold;
+      background-color: rgb(25, 34, 44);
+      h3 {
+        margin-bottom: 10px;
+      }
     }
   }
 }
