--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -9,28 +9,17 @@
       justify-content: space-between;
       align-items: last baseline;
       margin: auto;
+      padding-top: 100px;
       width: 75%;
       div {
         width: 50%;
-      }
-
-      h5 {
-        font-size: 1.5em;
-        span {
-          color: gold;
-          margin-right: 10px;
-        }
-      }
-      h1 {
-        font-size: 3.5em;
-        color: gold;
       }
     }
     #blogContent {
       display: flex;
       gap: 30px;
       flex-wrap: wrap;
-      padding-bottom: 100px;
+      // padding-bottom: 50px;
       margin: auto;
       width: 75%;
       #blog_card {
@@ -45,30 +34,19 @@
           height: 50vh;
         }
 
-        h1 {
-          padding: 0;
-          margin: 0;
-          color: gold;
-        }
         .date_icon {
           display: flex;
-          align-content: center;
-          justify-items: center;
-          gap: 10px;
           align-items: center;
+          gap: 10px;
+          margin-top: 10px;
+          // background-color: green;
+          p {
+            margin: 0;
+          }
           img {
             height: 2vh;
-            margin-top: 20px;
+            // margin-top: 20px;
           }
-          p {
-            font-size: 1em;
-            padding-bottom: 0;
-            margin-bottom: 0;
-          }
-        }
-        h1 {
-          font-size: 1.5em;
-          margin-top: 20px;
         }
       }
     }
