--- a/src/components/footer body/footer_body.scss
+++ b/src/components/footer body/footer_body.scss
@@ -40,12 +40,22 @@
               }
             }
           }
+          ~ div {
+            padding: 0px 10px 0px 10px;
+            > div {
+              gap: 10px;
+              span {
+                margin-left: 10px;
+              }
+              margin-bottom: 15px;
+            }
+          }
         }
       }
       #copyright {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
+        justify-content: space-between;
         width: 75%;
         margin: auto;
         // margin: auto;
@@ -54,9 +64,16 @@
         // margin: 0px 20px;
         // margin: 10px;
         // background-color: #02fa86;
+        padding: 30px 0px 30px;
         p {
           margin: 0;
-          padding: 30px;
+          
+        }
+        > div {
+          display: flex;
+          justify-content: center;
+          gap: 20px;
+          align-items: center;
         }
       }
     }
