--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -13,19 +13,6 @@
       justify-content: space-between;
       align-items: last baseline;
       width: 100%;
-      // margin: auto;
-      color: gold;
-      // & h5 {
-      //   font-size: 1.5em;
-      // }
-      // span {
-      //   color: white;
-      //   margin-right: 10px;
-      // }
-
-      // & h1 {
-      //   font-size: 3em;
-      // }
     }
     #gallery_container {
       display: flex;
@@ -33,11 +20,7 @@
       flex-wrap: wrap;
       gap: 15px;
       width: 100%;
-      // #gallery_content {
-      //   display: flex;
-      //   flex-direction: column;
-      //   gap: 15px;
-      // }
+
       #gallery_content2 {
         display: flex;
         flex-direction: column;
@@ -51,7 +34,7 @@
   }
   #gallerySliderContainer {
     margin-top: 50px;
-    margin-bottom: 100px;
+    // margin-bottom: 50px;
   }
   .sliding-gallery-container .slick-slide {
     display: flex !important; /* Ensure the slides take up full width */
@@ -72,25 +55,7 @@
     margin: 10px;
     text-align: center;
     align-items: center;
-    // background-color: blue;
-    // #gallery_text {
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: center;
-    //   margin: 10px;
-    //   align-items: center;
-    // }
 
-    .gallery_text {
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: center;
-      // margin: 10px;
-      // align-items: center;
-      // h2 {
-      //   margin-bottom: 0;
-      // }
-    }
     #gallery_container {
       display: flex;
       // justify-content: center;
