--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -2,6 +2,7 @@
 h1,
 h2,
 h3,
+h4,
 h5 {
   font-family: "Roboto", sans-serif;
   color: gold;
@@ -16,6 +17,11 @@ h2 {
   font-size: 2.5em;
   margin-top: 5px;
   margin-bottom: 15px;
+}
+h4 {
+  font-size: 1.1em;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 h5 {
   font-size: 1.4em;
