--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -8,7 +8,7 @@
     width: 75%;
     margin: auto;
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 
     > div {
       // display: flex;
@@ -68,7 +68,9 @@
         }
       }
     }
-
+    .slick-prev {
+      color: green;
+    }
     // Add styles to make the dots visible
     .slick-dots {
       display: block !important; /* Ensure dots are displayed */
@@ -94,7 +96,7 @@
       outline: none;
       background-color: rgba(255, 255, 255, 0.5);
       border-radius: 50%;
-      margin-top: 150px;
+      // margin-top: 150px;
     }
 
     .slick-active button {
