--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -21,6 +21,7 @@
         // height: 30px;
         margin: 0;
         padding: 0;
+        width: 30%;
       }
     }
     nav {
@@ -114,7 +115,6 @@
     }
 
     & close::content {
-      
     }
   }
 
