--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -11,7 +11,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     padding: 30px;
-    background-color: green;
+    // background-color: green;
     .logo {
       font-size: 1.5rem;
       font-weight: bold;
