--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -45,9 +45,9 @@
     height: 400px; /* Ensure the image takes up full height of the slide */
     object-fit: cover; /* Ensure the image fills the container while maintaining aspect ratio */
   }
-  #gallery {
-    // Your existing styles
-  }
+  // #gallery {
+  //   // Your existing styles
+  // }
 
   .instagram-feed {
     display: flex;
