--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -3,7 +3,7 @@
 @media only screen and (min-width: 769px) {
   #nav_container {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     // align-items: center;
     // align-content: center;
     color: #fff;
