--- a/src/components/why choose us/skills_bar.scss
+++ b/src/components/why choose us/skills_bar.scss
@@ -2,6 +2,9 @@
 
 @media only screen and (min-width: 768px) {
 .skill-bar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   margin-bottom: 15px;
   .skill-name {
     margin-bottom: 5px;
