--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -89,4 +89,8 @@
       font-size: 1em;
     }
   }
+  .map_container {
+    height: 400px; // Adjust the height as needed
+    margin-top: 200px;
+  }
 }
