--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -4,6 +4,7 @@
   #blog {
     color: white;
     background-color: #230b0b;
+
     #blogText {
       display: flex;
       justify-content: space-between;
@@ -26,12 +27,16 @@
         display: flex;
         flex-direction: column;
         background-color: rgb(52, 72, 83);
-        height: 70vh;
-        width: 30%;
+        // height: 70vh;
+        width: 40%;
         padding: 20px;
+        a {
+          color: rgb(187, 236, 187);
+          font-weight: 900;
+        }
         > img {
-          width: 100%;
-          height: 50vh;
+          // width: 100%;
+          height: 30vh;
         }
       }
     }
@@ -50,5 +55,4 @@
       // margin-top: 20px;
     }
   }
-
 }
