--- a/src/components/gallery/myPortfolio.scss
+++ b/src/components/gallery/myPortfolio.scss
@@ -3,9 +3,9 @@
 @media only screen and (min-width: 768px) {
   #myPortfolio {
     background-color: $page-background-color;
-    color: white;
 
     #myPortfolio_text {
+      padding-top: 100px;
       display: flex;
       justify-content: space-between;
       align-items: last baseline;
@@ -37,22 +37,12 @@
       }
     }
     #myPortfolio_content {
-      width: 75%;
-      margin: auto;
       .grid-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         gap: 10px;
-        // background-color: #2196f3;
-        // padding: 10px;
         margin-bottom: 100px;
-      }
-
-      .video-player {
-        // background-color: rgba(255, 255, 255, 0.8);
-        // padding: 5px;
-        // width: 30%;
       }
     }
   }
