--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -3,34 +3,19 @@
 @media only screen and (min-width: 769px) {
   #nav_container {
     display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // align-content: center;
+    justify-content: space-around;
+    align-items: center;
     color: #fff;
     font-size: 1.2rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 60%;
     padding: 30px;
-    // background-color: green;
     .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      // color: #f00;
-      img {
-        // width: 80px;
-        // height: 30px;
-        margin: 0;
-        padding: 0;
-        width: 20%;
-      }
+      height: 50px;
     }
     nav {
-      // background-color: red;
-      margin: 30px 0px 0px 0px;
       ul {
         display: flex;
-        // justify-items: center;
-        // align-items: center;
         list-style: none;
         margin: 0;
         li {
